--- a/app/src/main/res/layout/activity_leak.xml
+++ b/app/src/main/res/layout/activity_leak.xml
@@ -7,10 +7,11 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:scaleType="centerInside"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
